force-app/main/default/objects/ADM_Product_Tag__c/ADM_Product_Tag__c.object-meta.xml
<CustomObject>
    <label>TE Activity</label>
    <nameField>
        <label>TE Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TE Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>