force-app/main/default/objects/ADM_Product_Tag__c/fields/Default_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Default_Story_Points__c</fullName>
    <label>Default Story Points</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>