force-app/main/default/objects/ADM_Product_Tag__c/fields/Is_Planned__c.field-meta.xml
<CustomField>
    <fullName>Is_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Planned</label>
    <type>Checkbox</type>
</CustomField>