force-app/main/default/objects/ADM_Product_Tag__c/fields/Migration_MFA__c.field-meta.xml
<CustomField>
    <fullName>Migration_MFA__c</fullName>
    <label>Migration Major Functional Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>