force-app/main/default/objects/ADM_Product_Tag__c/fields/Migration_PA__c.field-meta.xml
<CustomField>
    <fullName>Migration_PA__c</fullName>
    <label>Migration Product Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>