force-app/main/default/objects/ADM_Product_Tag__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Product_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>