force-app/main/default/objects/ADM_Product_Tag__c/fields/Use_for_Automated_Tools__c.field-meta.xml
<CustomField>
    <fullName>Use_for_Automated_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use for Automated Tools</label>
    <type>Checkbox</type>
</CustomField>