force-app/main/default/objects/ADM_Product_Tag__c/validationRules/Team_is_Requied.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_is_Requied</fullName>
    <active>true</active>
    <errorConditionFormula>Team__c == &#39;&#39;</errorConditionFormula>
    <errorMessage>Team is a required a field</errorMessage>
</ValidationRule>