force-app/main/default/objects/ADM_Product_Tag__c/listViews/All_Field.listView-meta.xml
<ListView>
    <fullName>All_Field</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Field</value>
    </filters>
    <label>All Field</label>
</ListView>